# fastapi-flyio-template

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONVENTIONS.md  README.md  fly.toml  pyproject.toml  test_main.py
specs/: backend.md  overview.md
